Updated index.html and added EMS.jpg and style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
+    <div class="header">
         <h1>My Portfolio</h1>
         <nav>
           <ul>
@@ -17,12 +17,11 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
-      </header>
-      <div class="hero">
-        <img src="avatar.jpg" alt="Arun Mundackal">
-        <h1>[Arun Mundackal]</h1>
-      </div>
-    </header>
+    </div>
+    <div class="hero">
+      <img src="EMS.jpg" alt="Arun Mundackal" style="max-width: 100%; height: auto; border-radius: 50%;">
+      <h1>Arun Mundackal</h1>
+    </div>
     <main>
       <section id="about">
         <h2>About Me</h2>
@@ -38,7 +37,7 @@
       </section>
       <section id="contact">
         <h2>Contact Me</h2>
-        <p>You can contact me by email at <a href="mailto:[email]">[email]</a>, or connect with them on <a href="[social media]">[social media]</a>.</p>
+        <p>You can contact me by email at <a href="arunmundackal7@gmail.com">[arunmundackal7@gmail.com]</a>, or connect with them on <a href="[social media]">[social media]</a>.</p>
       </section>
     </main>
     
