--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					</a>
 					<a href="https://github.com/GenjutsYou?tab=repositories" class="app-section app2">
 						<h5 id="app2">Application 2</h5>
-						<p>Coding-Playground</p>
+						<p>Playground</p>
             <img src="./playground.jpg" alt="Playground Image">
 					</a>
 					<a href="https://github.com/GenjutsYou?tab=projects" class="app-section app3">
@@ -60,6 +60,7 @@
 				<h3>Contact Me</h3>
 				<div>
           <p>Feel free to reach out to me with any questions, inquiries, or opportunities you may have! </p>
+          <p>My Email: <a href="mailto:arunmundackal7@gmail.com">arunmundackal7@gmail.com</a></p>
 				</div>
 			</section>
 		</main>
