--- a/index.html
+++ b/index.html
@@ -10,30 +10,33 @@
 	<body>
 		<header class="header">
 			<h1>My Portfolio</h1>
-			<nav>
-				<a href="#about">About Me</a>
-				<a href="#work">My Work</a>
-				<a href="#contact">Contact Me</a>
-			</nav>
-		</header>
+			<div class="nav-container">
+				<nav>
+					<a href="#about">About Me</a>
+					<a href="#work">My Work</a>
+					<a href="#contact">Contact Me</a>
+				</nav>
+			</div>
+		</header>		
 		<div class="hero">
 			<img src="EMS2.0.jpg" alt="Hero Image" style="width: 80px; height: 80px" />
 			<div class="hero-content">
-        <h2>Arun Mundackal</h2>
-      </div>
-		</div>
+				<h2>Arun Mundackal</h2>
+			</div>
+		</div>		
 		<main>
 			<section id="about">
 				<h3>About Me</h3>
 				<div>
-					<p>
-            Hello, my name is Arun. Welcome to my professional portfolio website, which highlights my expertise as a skilled developer with substantial experience in building dynamic web applications using a diverse range of technologies, including HTML, CSS, and JavaScript.
+				<p>
+				Welcome to my professional portfolio website! My name is Arun, and I am a dedicated developer currently enrolled in a comprehensive fullstack coding bootcamp at the University of Arizona. I have a passion for building dynamic web applications using a wide array of technologies, including HTML, CSS, and JavaScript.
 
-            Through this platform, I aim to demonstrate my proficiency and accomplishments in the field, showcasing my ability to create innovative and user-friendly web solutions. 
+            	In addition to my web development expertise, I am also deeply fascinated by the realms of game development and artificial intelligence. I am actively pursuing opportunities to expand my knowledge and skills in these areas, as I believe they hold immense potential for innovation and creativity. 
 
-            Thank you for taking the time to explore my portfolio. I am excited to showcase my skills and further improvements in web development. If you have any questions or would like to discuss potential opportunities, please don't hesitate to reach out.
+            	I invite you to explore my portfolio, where I showcase my proficiency in creating innovative and user-friendly web solutions. It is my goal to provide engaging and seamless experiences for users through my work.
 
-          </p>
+				Thank you for taking the time to visit my website. I am thrilled to demonstrate my abilities and growth in the field of web development. If you have any questions or would like to discuss potential opportunities, please feel free to reach out. I am always eager to connect and collaborate!
+				</p>
 				</div>
 			</section>
 			<section id="work">
