--- a/index.html
+++ b/index.html
@@ -65,14 +65,26 @@
 				<h3>Contact Me</h3>
 				<div>
 					<p>Feel free to reach out to me with any questions, inquiries, or opportunities you may have! </p>
-					<p>My Email: <a href="mailto:arunmundackal7@gmail.com">arunmundackal7@gmail.com</a></p>
+					<div class ="connect">
+						<a href="mailto:arunmundackal7@gmail.com">@arunmundackal7@gmail.com</a>
+						<a href="https://github.com/GenjutsYou">GitHub</a>
+					</div>
 				</div>
 			</section>
 		</main>
 		<footer>
-			<p>"No matter what darkness lies ahead, as long as you keep moving forward, you will eventually reach the light."</p>
-			<p>- Itachi Uchiha</p>
-		</footer>
+			<div id="about-quote">
+			  <p>"The only difference between the master and the novice is that the master has failed more times then the novice has tried."</p>
+			</div>
+			<div id="work-quote">
+			  <p>""Are you a different animal and the same beast?""</p>
+			</div>
+			<div id="contact-quote">
+				<p>"No matter what darkness lies ahead, as long as you keep moving forward, you will eventually reach the light."</p>
+				<!-- <p>- Itachi Uchiha</p> -->
+			</div>
+		  </footer>
+		  
 		<script src="./js/script.js"></script>
 	</body>
 </html>
